# StudyWatson

./: README.md  pyproject.toml
.requirements/: base.txt  dev.txt  production.txt
app/config/: storages.py  urls.py
app/config/settings/: base.py  dev.py  production.py
app/members/: admin.py  apis.py  models.py  permissions.py  serializers.py
app/members/migrations/: 0002_user_img_profile.py  0003_user_nickname.py  0004_auto_20190707_1651.py  0005_auto_20190707_1700.py  0006_auto_20190825_1905.py
app/study/: admin.py  apis.py  apps.py  filters.py  models.py  serializers.py  urls.py
app/study/migrations/: 0001_initial.py  0002_auto_20190630_0447.py  0003_studymember_is_withdraw.py  0004_auto_20190717_0224.py  0005_auto_20190718_1847.py  0006_auto_20190719_1419.py  0007_remove_schedule_studying_time.py  0008_schedule_studying_time.py  0009_auto_20190720_1803.py  0010_auto_20190721_1732.py  0011_auto_20190724_1833.py  0012_auto_20190810_1558.py  0013_auto_20190810_1558.py  0014_auto_20190813_0429.py  0015_auto_20190825_1905.py
app/study/serializers/: __init__.py  attendance.py  invite.py  membership.py  schedule.py  study.py
app/templates/: base.html  index.html
app/utils/: models.py
app/utils/drf/: errors.py  exceptions.py
