[tool.poetry]
name = "study-watson"
version = "0.1.0"
description = ""
authors = ["이한영 <dev@lhy.kr>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2.7"
django-admin-sortable2 = "^0.7.3"
django-default-imagefield = "^0.5.5"
django-extensions = "^2.2.5"
django-filter = "^2.2.0"
django-json-secrets = "^0.1.11"
django-modeladmin-reorder = "^0.3.1"
django-phonenumber-field = "^3.0.1"
django-storages = "^1.7.2"
django-aws-secrets-manager = "^0.1.2"
djangorestframework = "^3.10.3"
djangorestframework-camel-case = "^1.1.2"
django-cors-headers = "^3.1.1"
django-extra-fields = "^2.0.1"
django-rest-auth = "^0.9.5"
drf-writable-nested = "^0.5.1"
drf-yasg = "^1.17.0"
psycopg2-binary = "^2.8.4"
boto3 = "^1.10.14"
packaging = "^19.2"
pillow = "^6.2.1"
phonenumberslite = "^8.10.22"
sentry-sdk = "^0.13.2"
gunicorn = "^20.0.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^2.0"
django-querycount = "^0.7.0"
notebook = "^6.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
